[gd_scene load_steps=25 format=3 uid="uid://dqqvmdxu25lu6"]

[ext_resource type="Script" uid="uid://b2spl8qenv44c" path="res://Scripts/options.gd" id="1_35y0k"]
[ext_resource type="Texture2D" uid="uid://bxx3h2tm25hre" path="res://Sprites/Title Screen/Options/OptionsBG.png" id="1_jt3no"]
[ext_resource type="Texture2D" uid="uid://dyj3grkovvv3x" path="res://Sprites/Title Screen/Options/OptionsButtons.png" id="2_j6lap"]
[ext_resource type="FontFile" uid="uid://dw3bs4aaneafm" path="res://Sprites/Font.png" id="3_j6lap"]
[ext_resource type="Texture2D" uid="uid://vosaei014mpv" path="res://Sprites/Title Screen/Options/OptionsBack.png" id="5_jme0m"]
[ext_resource type="AudioStream" uid="uid://lfisbsa8gxlh" path="res://Audio/Sfx/Hit.wav" id="6_qamcq"]
[ext_resource type="AudioStream" uid="uid://c4o8sr5idypgb" path="res://Audio/Sfx/MapMove.wav" id="7_qamcq"]
[ext_resource type="AudioStream" uid="uid://dhrkcose1nf4s" path="res://Audio/Sfx/HammerBroMove.wav" id="8_lb2cc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ww8vx"]
atlas = ExtResource("2_j6lap")
region = Rect2(0, 76, 72, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_kftxf"]
atlas = ExtResource("2_j6lap")
region = Rect2(0, 0, 72, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_663nc"]
atlas = ExtResource("2_j6lap")
region = Rect2(0, 136, 56, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_hvj8k"]
atlas = ExtResource("2_j6lap")
region = Rect2(0, 60, 56, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_38txh"]
atlas = ExtResource("2_j6lap")
region = Rect2(0, 106, 84, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_5a0sy"]
atlas = ExtResource("2_j6lap")
region = Rect2(0, 30, 84, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_g5vgl"]
atlas = ExtResource("2_j6lap")
region = Rect2(0, 121, 76, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_srb65"]
atlas = ExtResource("2_j6lap")
region = Rect2(0, 45, 76, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_qcivb"]
atlas = ExtResource("2_j6lap")
region = Rect2(0, 91, 72, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_aag3x"]
atlas = ExtResource("2_j6lap")
region = Rect2(0, 15, 72, 8)

[sub_resource type="Animation" id="Animation_540gs"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_rgp33"]
resource_name = "close"
step = 0.0333333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.13333334, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2), Vector2(0.7, 0.7)]
}

[sub_resource type="Animation" id="Animation_h0b8o"]
resource_name = "pop"
step = 0.0333333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(-0.033333335, 0.099999994, 0.16666667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.7, 0.7), Vector2(1.2, 1.2), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rgp33"]
_data = {
&"RESET": SubResource("Animation_540gs"),
&"close": SubResource("Animation_rgp33"),
&"pop": SubResource("Animation_h0b8o")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_lb2cc"]
atlas = ExtResource("5_jme0m")
region = Rect2(0, 0, 94, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_1prx2"]
atlas = ExtResource("5_jme0m")
region = Rect2(0, 25, 94, 23)

[node name="Options" type="Node2D"]
script = ExtResource("1_35y0k")

[node name="BG" type="Sprite2D" parent="."]
texture = ExtResource("1_jt3no")

[node name="Tabs" type="VBoxContainer" parent="."]
offset_left = -136.0
offset_top = -49.0
offset_right = -52.0
offset_bottom = 23.0
theme_override_constants/separation = 8

[node name="Display" type="TextureButton" parent="Tabs"]
layout_mode = 2
texture_normal = SubResource("AtlasTexture_ww8vx")
texture_hover = SubResource("AtlasTexture_kftxf")

[node name="Audio" type="TextureButton" parent="Tabs"]
layout_mode = 2
texture_normal = SubResource("AtlasTexture_663nc")
texture_hover = SubResource("AtlasTexture_hvj8k")

[node name="Gameplay" type="TextureButton" parent="Tabs"]
layout_mode = 2
texture_normal = SubResource("AtlasTexture_38txh")
texture_hover = SubResource("AtlasTexture_5a0sy")

[node name="Moveset" type="TextureButton" parent="Tabs"]
layout_mode = 2
texture_normal = SubResource("AtlasTexture_g5vgl")
texture_hover = SubResource("AtlasTexture_srb65")

[node name="Sprites" type="TextureButton" parent="Tabs"]
layout_mode = 2
texture_normal = SubResource("AtlasTexture_qcivb")
texture_hover = SubResource("AtlasTexture_aag3x")

[node name="Options" type="VBoxContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="Display" type="Node2D" parent="Options"]

[node name="VSyncLabel" type="Label" parent="Options/Display"]
offset_left = -35.0
offset_top = -34.0
offset_right = 5.0
offset_bottom = -26.0
theme_override_fonts/font = ExtResource("3_j6lap")
theme_override_font_sizes/font_size = 8
text = "vsync:"

[node name="VSyncValueButton" type="Button" parent="Options/Display"]
offset_left = 112.0
offset_top = -34.0
offset_right = 136.0
offset_bottom = -26.0
flat = true

[node name="VSyncValue" type="Label" parent="Options/Display/VSyncValueButton"]
layout_mode = 0
offset_right = 24.0
offset_bottom = 8.0
theme_override_fonts/font = ExtResource("3_j6lap")
theme_override_font_sizes/font_size = 8
text = "off"
horizontal_alignment = 2

[node name="SizeLabel" type="Label" parent="Options/Display"]
offset_left = -35.0
offset_top = -19.0
offset_right = 45.0
offset_bottom = -11.0
theme_override_fonts/font = ExtResource("3_j6lap")
theme_override_font_sizes/font_size = 8
text = "size:"

[node name="SizeValueButton" type="Button" parent="Options/Display"]
offset_left = 72.0
offset_top = -19.0
offset_right = 136.0
offset_bottom = -11.0
flat = true

[node name="SizeValue" type="Label" parent="Options/Display/SizeValueButton"]
layout_mode = 0
offset_right = 64.0
offset_bottom = 8.0
theme_override_fonts/font = ExtResource("3_j6lap")
theme_override_font_sizes/font_size = 8
text = "extended"
horizontal_alignment = 2

[node name="ModeLabel" type="Label" parent="Options/Display"]
offset_left = -35.0
offset_top = -49.0
offset_right = 45.0
offset_bottom = -41.0
theme_override_fonts/font = ExtResource("3_j6lap")
theme_override_font_sizes/font_size = 8
text = "mode:"

[node name="ModeValueButton" type="Button" parent="Options/Display"]
offset_left = 16.0
offset_top = -49.0
offset_right = 136.0
offset_bottom = -41.0
flat = true

[node name="ModeValue" type="Label" parent="Options/Display/ModeValueButton"]
layout_mode = 0
offset_right = 120.0
offset_bottom = 8.0
theme_override_fonts/font = ExtResource("3_j6lap")
theme_override_font_sizes/font_size = 8
text = "borderless full"
horizontal_alignment = 2

[node name="DropShadowLabel" type="Label" parent="Options/Display"]
offset_left = -35.0
offset_top = -4.0
offset_right = 45.0
offset_bottom = 4.0
theme_override_fonts/font = ExtResource("3_j6lap")
theme_override_font_sizes/font_size = 8
text = "drop shadows:"

[node name="DropShadowValueButton" type="Button" parent="Options/Display"]
offset_left = 112.0
offset_top = -4.0
offset_right = 136.0
offset_bottom = 4.0
flat = true

[node name="DropShadowValue" type="Label" parent="Options/Display/DropShadowValueButton"]
layout_mode = 0
offset_right = 24.0
offset_bottom = 8.0
theme_override_fonts/font = ExtResource("3_j6lap")
theme_override_font_sizes/font_size = 8
text = "off"
horizontal_alignment = 2

[node name="Audio" type="Node2D" parent="Options"]

[node name="Gameplay" type="Node2D" parent="Options"]

[node name="Moveset" type="Node2D" parent="Options"]

[node name="Sprites" type="Node2D" parent="Options"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_rgp33")
}
autoplay = "pop"

[node name="Back" type="TextureButton" parent="."]
offset_left = -138.0
offset_top = 49.0
offset_right = -44.0
offset_bottom = 72.0
texture_normal = SubResource("AtlasTexture_lb2cc")
texture_hover = SubResource("AtlasTexture_1prx2")

[node name="BackSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_qamcq")

[node name="SwitchTabs" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_qamcq")

[node name="ChangeOption" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_lb2cc")
volume_db = 5.0

[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
